miyembro-civo-buildah-kubernetes/jenkins-miyembro-deployment-service-aws-buildah.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: default
spec:
  selector:
    matchLabels:
      app: jenkins
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: arjayfuentes24/miyembro-jenkins-buildah:latest
          securityContext:
            privileged: true
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "2"
#          resources: #initial values resources
#            requests:
#              memory: "512Mi"
#              cpu: "500m"
#            limits:
#              memory: "1Gi"
#              cpu: "1"
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: topology.kubernetes.io/zone
#                    operator: In
#                    values:
#                      - eu-north-1a  # Ensure this matches your availability zone
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-pvc
      serviceAccountName: jenkins

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: ui
      port: 8080
      targetPort: 8080
    - name: jnlp
      port: 50000
      targetPort: 50000
  selector:
    app: jenkins
